Add more Czech rivers

--- a/geography/static/tpl/about.html
+++ b/geography/static/tpl/about.html
@@ -60,13 +60,13 @@
     <h3 translate>Příprava map</h3>
     <ul>
       <li translate>
-        Řeky Slovenska připravil Radim Krchňáček
+        Řeky Slovenska a České republiky připravil Radim Krchňáček.
       </li>
       <li translate>
-        Rakouské řeky zpracoval Martin Spáčil 
+        Rakouské řeky zpracoval Martin Spáčil.
       </li>
       <li translate>
-        Ostatní mapy připravil Vít Stanislav
+        Ostatní mapy připravil Vít Stanislav.
       </li>
     </ul>
   </div>
@@ -117,7 +117,15 @@
       <li>
         <a href="http://download.geofabrik.de/">OpenStreetMap Data Extracts</a>
         <span translate> - města České republiky a Slovenska</span>
-        </li>
+      </li>
+      <li>
+        <a href="http://www.dibavod.cz/">DIBAVOD</a>
+        <span translate> - řeky České republiky</span>
+      </li>
+      <li>
+        <a href="http://www.geofabrik.de/">GEOFABRIK</a>
+        <span translate> - řeky Rakouska</span>
+      </li>
     </ul>
 
     <ul>
