--- a/geography/static/tpl/about.html
+++ b/geography/static/tpl/about.html
@@ -63,7 +63,7 @@
         Řeky Slovenska a České republiky připravil Radim Krchňáček.
       </li>
       <li translate>
-        Rakouské řeky zpracoval Martin Spáčil.
+        Rakouské řeky a města Finska, Švédska a Norska zpracoval Martin Spáčil.
       </li>
       <li translate>
         Ostatní mapy připravil Vít Stanislav.
