--- a/geography/static/tpl/practice_tpl.html
+++ b/geography/static/tpl/practice_tpl.html
@@ -13,7 +13,7 @@
       <div class="question button-block">
         <span ng-bind="question | questionText"></span>
         <span class="label label-default" ng-show="question|isFindOnMapType">
-          <i class="flag-{{question.description}}"></i> {{question.term.name}}
+          <span term-label="{{question.term}}"></span>
         </span>
         <span ng-if="question.answered_code && (question|isFindOnMapType) &&
           question.answered_code != question.description">
@@ -35,7 +35,7 @@
             ng-class="{'btn-success': option.correct, 'btn-danger':
             option.selected && !option.correct }"
             ng-disabled="option.disabled">
-             <i class="flag-{{option.description}}"></i> {{option.term.name}}
+            <span term-label="{{option.term}}"></span>
           </button>
         </span>
       </div>
