--- a/geography/static/tpl/practice_tpl.html
+++ b/geography/static/tpl/practice_tpl.html
@@ -10,16 +10,16 @@
     <div ng-repeat="question in questions"
         ng-class="{'slide-out': question.slideOut}"
         class="inner-practice">
-      <div class="question">
+      <div class="question button-block">
         <span ng-bind="question | questionText"></span>
         <span class="label label-default" ng-show="question|isFindOnMapType">
           <i class="flag-{{question.description}}"></i> {{question.term.name}}
         </span>
-        <span ng-show="question.answered_code && (question|isFindOnMapType) &&
+        <span ng-if="question.answered_code && (question|isFindOnMapType) &&
           question.answered_code != question.description">
           <span>{{'Vybráno' | translate }}</span>
           <span class="label label-default">
-            <i class="flag-{{question.answered_code}}"></i> {{question.answered_code|codeToName}}
+            <span term-label="{{question.answered_code|codeToTerm}}"></span>
           </span>
         </span>
         <br class="clearfix">
@@ -27,7 +27,7 @@
         <div mnemonic="{{question}}" class="col-sm-12"
           ng-show="canNext && question.answered_code != question.description">
         </div>
-      <span class="col-sm-7">
+      <div class="col-sm-7 button-block">
         <span ng-show="question|isPickNameOfType">
           <button ng-repeat="option in question.options"
             class="btn btn-lg btn-default"
@@ -38,8 +38,8 @@
              <i class="flag-{{option.description}}"></i> {{option.term.name}}
           </button>
         </span>
-      </span>
-      <span class="col-sm-5" >
+      </div>
+      <div class="col-sm-5 button-block" >
         <button class="btn btn-lg btn-default dont-know"
                 ng-click="checkAnswer()"
                 ng-disabled="canNext || checking" >
@@ -56,7 +56,7 @@
                 ng-show="question.options != undefined" >
             <i class="glyphicon glyphicon-repeat"></i> {{'Znovu zvýraznit' | translate }}
         </button>
-      </span>
+      </div>
     </div>
     <div ng-show="loadingNextQuestion" class="loading-indicator overlay">
     </div>
@@ -89,7 +89,7 @@
         </div>
       </div>
       <br>
-      <span class="pull-right" >
+      <span class="pull-right button-block" >
       <!--
         <a class="btn btn-lg btn-default"
            ng-show="user.username"
