Update offer page

--- a/geography/static/tpl/content-admin-offer.html
+++ b/geography/static/tpl/content-admin-offer.html
@@ -48,7 +48,9 @@
         <a href="https://www.transifex.com/adaptive-learning/slepemapycz/">
         na transifex stránce projektu slepemapy.cz</a> na zelené tlačítko 
         <a href="https://www.transifex.com/signup/?join_project=slepemapycz">
-        POMOZTE PŘELOŽIT "slepemapy.cz"</a>.
+        POMOZTE PŘELOŽIT "slepemapy.cz"</a>, registrovat se a počkat na
+        schválení Vašeho přístupu do projektu (většinou v řádu hodin,
+        maximálně několika dní).
       </p>
     </div>
     <h3> Příprava map v GIS software</h3>
@@ -60,6 +62,19 @@
       href="http://www.qgis.org/en/site/">QGIS</a>) s možností ukládání map do
       formátu Shapefile. Na bližších detailech se můžeme domluvit na výše uvedeném
       emailu.
+      </p>
+    </div>
+    <h3>Jste učitel a používáte slepemapy.cz ve škole?</h3>
+    <div class="works-div">
+      <p>
+      Jste učitel a zadáváte procvičování map svým žákům? Chcete mít přehled o
+      tom, co žáci v systému procvičovali a jak jim to šlo? Chybí Vám nějaká
+      další funkcionalita? Hodily by se Vám nějaké další mapy? Napište nám na
+      výše uvedený email jak systém používáte (Např.: Jaký typ školy? Kolik
+      žáků? Přímo v hodinách, nebo za domácí úkol?) nebo co Vám v něm chybí. 
+      Pomůžete nám tak nastavit další směřování projektu a zvýšit jeho užitečnost.
+      V případě začlenění Vašich podnětů Vám můžeme nabídnout možnost vyzkoušet
+      je a napsat nám připadné připomínky ještě před zveřejněním. 
       </p>
     </div>
   </div>
