Update about page

--- a/geography/static/tpl/about.html
+++ b/geography/static/tpl/about.html
@@ -63,7 +63,10 @@
         Řeky Slovenska a České republiky připravil Radim Krchňáček.
       </li>
       <li translate>
-        Rakouské řeky a města Finska, Švédska a Norska zpracoval Martin Spáčil.
+        Řeky Severní Ameriky, rakouské řeky, města Finska, Švédska a Norska zpracoval Martin Spáčil.
+      </li>
+      <li translate>
+        Moře Evropy připravil Jakub Kohn.
       </li>
       <li translate>
         Ostatní mapy připravil Vít Stanislav.
@@ -83,6 +86,12 @@
       <li translate>
         <i class="flag-de"></i> Německý překlad vytvořila Petra Moskva a její
         studentky z Gymnázia a Obchodní Akdemie Orlová.
+      </li>
+      <li translate>
+        <i class="flag-ru"></i> Ruský překlad vytvořila Daria Pozhidaeva.
+      </li>
+      <li translate>
+        <i class="flag-sk"></i> Slovenský překlad vytvořil především Miroslav Fic.
       </li>
     </ul>
     <br>
