Swap promo banner buttons

--- a/geography/static/tpl/promo_banner.html
+++ b/geography/static/tpl/promo_banner.html
@@ -7,20 +7,20 @@
     <span class="sr-only" translate>Zavřít</span>
   </button>
   Už jste vyzkoušeli naše další systémy
-  <a href="http://www.umimecesky.cz/"
-     track-click="umimecesky banner"
-     target="_blank"
-     class="btn btn-primary"
-    >
-    Umíme Česky
-    </a>
-  a
   <a href="http://www.poznavackaprirody.cz/"
-     track-click="poznavackaprirody banner"
+     track-click="poznavackaprirody banner 2"
      target="_blank"
      class="btn btn-primary"
     >
   Poznávačka přírody
+    </a>
+    a
+  <a href="http://www.umimecesky.cz/"
+     track-click="umimecesky banner 2"
+     target="_blank"
+     class="btn btn-primary"
+    >
+    Umíme Česky
     </a>
     ?
 </div>
