--- a/geography/static/tpl/homepage.html
+++ b/geography/static/tpl/homepage.html
@@ -50,11 +50,13 @@
             track-click="homepage practice" >
             {{"Státy Světa" | translate }}
           </a>
-        <div class="flatblock-content">
+        <div class="flatblock-content" variation="0">
           {{"Chcete jinou? Podívejte se na" | translate }}
+          <br>
           <a href="/overview/"
+            class="btn btn-default btn-lg btn-huge"
             track-click="homepage practice" >
-            {{"další mapy" | translate }}</a>.
+            {{"další mapy" | translate }}</a>
         </div>
       </div>
   </div>
