Update about page

--- a/geography/static/tpl/about.html
+++ b/geography/static/tpl/about.html
@@ -58,18 +58,31 @@
   </div>
   <div class="works-div">
     <h3 translate>Příprava map</h3>
+    <p translate>Do přípravy map se zapojili:</p>
     <ul>
-      <li translate>
-        Řeky Slovenska a České republiky připravil Radim Krchňáček.
+      <li>
+        <strong>Radim Krchňáček:</strong>
+        <span translate>řeky Slovenska, řeky ČR, vodní nádrže ČR</span>
       </li>
-      <li translate>
-        Řeky Severní Ameriky, rakouské řeky, města Finska, Švédska a Norska zpracoval Martin Spáčil.
+      <li>
+        <strong>Martin Spáčil:</strong>
+        <span translate>Řeky Severní Ameriky, rakouské řeky, města Finska, Švédska a Norska</span>
       </li>
-      <li translate>
-        Moře Evropy připravil Jakub Kohn.
+      <li>
+        <strong>Jakub Kohn:</strong>
+        <span translate>Moře Evropy</span>
       </li>
-      <li translate>
-        Ostatní mapy připravil Vít Stanislav.
+      <li>
+        <strong>Daniel Šácha:</strong>
+        <span translate>Povrch ČR</span>
+      </li>
+      <li>
+        <strong>Jakub Trojan:</strong>
+        <span translate>Okresy ČR</span>
+      </li>
+      <li>
+        <strong>Vít Stanislav:</strong>
+        <span translate>Ostatní mapy</span>
       </li>
     </ul>
   </div>
