--- a/geography/static/tpl/practice_tpl.html
+++ b/geography/static/tpl/practice_tpl.html
@@ -96,7 +96,7 @@
           <i class="glyphicon glyphicon-arrow-right"></i> {{'Pokračovat v procvičování' | translate }}
         </a>
         <a class="btn-continue btn btn-lg btn-default"
-           href="/view/{{part}}/" >
+           href="/view/{{part}}/{{placeType}}" >
           <i class="glyphicon glyphicon-globe"></i> {{'Mapa znalostí' | translate }}
         </a>
         <a class="btn-continue btn btn-lg btn-default"
