Update about page

--- a/geography/static/tpl/about.html
+++ b/geography/static/tpl/about.html
@@ -78,7 +78,7 @@
       </li>
       <li>
         <strong>Jakub Trojan:</strong>
-        <span translate>Okresy ČR</span>
+        <span translate>Okresy ČR, CHKO ČR</span>
       </li>
       <li>
         <strong>Vít Stanislav:</strong>
