Show map thumbnails in map overview

--- a/geography/static/tpl/overview_tpl.html
+++ b/geography/static/tpl/overview_tpl.html
@@ -8,20 +8,28 @@
       </h2>
       <ul>
         <li class="overview-row" ng-repeat="map in c.maps">
-          <h3 class="col-md-offset-1 col-sm-3"><a href="/view/{{map.identifier}}/{{user}}">{{map.name}}</a>
+          <h3 class="col-md-offset-1 col-sm-2"><a href="/view/{{map.identifier}}/{{user}}">{{map.name}}</a>
             <div class="map-progress" count="{{map.placesTypes|sumCounts}}" 
                  skills="{{mapSkills(map)}}">
             </div>
           </h3>
-          <ul class="col-sm-9 col-md-7 inline">
+          <ul class="col-sm-10 col-md-8 inline">
             <li class="inline-block" ng-repeat="type in map.placeTypes">
               <a href="/practice/{{map.identifier}}/{{type.identifier}}" 
-                 class="btn btn-primary"
+                style="background-image :
+                url('/media/_versions/{{map.identifier}}-{{type.identifier}}_medium.png'); "
+                 class="btn-map"
                  tooltip="{{'Procvičovat'| translate }}">
-                 {{type.name}}</a>
+                 <div class="cloak"></div>
+                 <span>{{type.name}}</span>
+                 </a>
               <div class="map-progress" 
                    skills="{{mapSkills(map, type)}}">
               </div>
+               <span
+                ng-if="refreshthumbs"
+                style="background-image :
+                url('/admin/filebrowser/detail/?filename={{map.identifier}}-{{type.identifier}}.png'); "></span>
             </li>
           </ul>
           <div class="clearfix"></div>
