Fix maps overview mobile layout

--- a/geography/static/tpl/overview_tpl.html
+++ b/geography/static/tpl/overview_tpl.html
@@ -13,7 +13,7 @@
                  skills="{{mapSkills(map)}}">
             </div>
           </h3>
-          <ul class="col-sm-10 col-md-8 inline">
+          <ul class="col-sm-10 col-md-8">
             <li class="inline-block" ng-repeat="type in map.placeTypes">
               <a href="/practice/{{map.identifier}}/{{type.identifier}}" 
                 style="background-image :
