--- a/geography/static/tpl/practice_tpl.html
+++ b/geography/static/tpl/practice_tpl.html
@@ -66,7 +66,7 @@
                  style="width: {{(1 - summary.correctlyAnsweredRatio) | percent }};">
             </div>
           </div>
-          <span ng-repeat="fc in summary.flashcards"
+          <span ng-repeat="fc in summary.questions"
                 ng-click="map.highlightState(fc.description)"
                 class="label {{fc.description != fc.answered_code &&
                   'label-unlearned' || 'label-learned' }} ">
