--- a/geography/static/tpl/view_tpl.html
+++ b/geography/static/tpl/view_tpl.html
@@ -7,7 +7,7 @@
     <div class="tab inline-tab"
         ng-class="{'active' : !type.hidden}"
         ng-repeat="type in placesTypes" 
-        ng-hide="(placesTypes.length == 0)"
+        ng-show="type.stats.number_of_flashcards"
         ng-click="updateMap(type)">
       <h2>
         {{type.name}}
@@ -16,15 +16,10 @@
     <div class="clearfix"></div>
   </div>
   <div ng-show="placesTypes.length" class="layers-tabs"
-      ng-if="!type.hidden"
+      ng-if="!type.hidden && type.stats.number_of_flashcards"
       ng-repeat="type in placesTypes" >
-        <div class="col-sm-12">
-          <div class="map-progress" 
-             skills="{{ {
-               number_of_flashcards: type.places.length,
-               number_of_practiced_flashcards: (type.places|filter:{practiced:true}).length,
-               number_of_mastered_flashcards: (type.places|filter:{mastered:true, practiced:true}).length
-             } }}"></div>
+        <div class="col-sm-12" ng-if="type.stats && !average" >
+          <div class="map-progress" skills="{{ type.stats }}"></div>
         </div>
         <div class="col-sm-12">
           <a href="/practice/{{part}}/{{type.identifier}}" 
@@ -58,7 +53,9 @@
         </div>
         <div class="clearfix"></div>
         <div class="view-places">
-          <div ng-hide="(type.places|filter:{practiced:true}).length" class="alert alert-info">
+          <div ng-hide="type.loaded || error" class="loading-indicator">
+          </div>
+          <div ng-hide="(type.places|filter:{practiced:true}).length || !type.loaded" class="alert alert-info">
             {{'Zde zatím nebylo nic procvičováno.' | translate }}
           </div>
           <span ng-repeat="place in type.places|filter:{practiced:true}"
