--- a/geography/static/tpl/overview_tpl.html
+++ b/geography/static/tpl/overview_tpl.html
@@ -14,7 +14,8 @@
             </div>
           </h3>
           <ul class="col-sm-10 col-md-8">
-            <li class="inline-block" ng-repeat="type in map.placeTypes">
+            <li class="inline-block" ng-repeat="type in map.placeTypes"
+                ng-if="type.stats.number_of_items != 0">
               <a href="/practice/{{map.identifier}}/{{type.identifier}}" 
                 style="background-image :
                 url('/media/_versions/{{map.identifier}}-{{type.identifier}}_medium.png'); "
