--- a/geography/static/tpl/promo_banner.html
+++ b/geography/static/tpl/promo_banner.html
@@ -1,27 +1,3 @@
-<div class="bottom-alert text-center alert alert-info"
-     ng-if="!('promo2'|cookieExists)">
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close"
-            set-cookie-on-click="promo2"
-            track-click="close promo2 banner">
-        <span aria-hidden="true">&times;</span>
-        <span class="sr-only" translate>Zavřít</span>
-    </button>
-    Už jste vyzkoušeli naše další systémy
-    <a href="http://umimecesky.cz/"
-       track-click="umime cesky"
-       target="_blank"
-       class="btn btn-primary"
-    >
-        Umíme česky
-    </a>
-    a
-    <a href="https://www.umimeanglicky.cz/"
-       track-click="umimeanglicky banner 3"
-       target="_blank"
-       class="btn btn-primary"
-    >
-        Umíme anglicky
-    </a>
-    ?
+<div class="bottom-alert text-center alert alert-info ng-scope" style="background-color:orange;font-size:xx-large">
+Slepé mapy se postupně stěhují na <a href="https://www.umimefakta.cz/slepe-mapy" class="btn btn-primary">Umíme fakta</a>.<br> Provoz stránky slepemapy.cz bude během roku 2018 ukončen!
 </div>
-
