--- a/geography/static/tpl/promo_banner.html
+++ b/geography/static/tpl/promo_banner.html
@@ -1,3 +1,8 @@
-<div class="bottom-alert text-center alert alert-info ng-scope" style="background-color:orange;font-size:xx-large">
-Slepé mapy se postupně stěhují na <a href="https://www.umimefakta.cz/slepe-mapy" class="btn btn-primary">Umíme fakta</a>.<br> Provoz stránky slepemapy.cz bude během roku 2018 ukončen!
+<div class="bottom-alert text-center alert alert-danger ng-scope" style="font-size:xx-large">
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close"
+          track-click="close promo2 banner">
+    <span aria-hidden="true">&times;</span>
+    <span class="sr-only" translate>Zavřít</span>
+  </button>
+  Slepé mapy se postupně stěhují na <a href="https://www.umimefakta.cz/slepe-mapy" class="btn btn-primary">Umíme fakta</a>.<br> Provoz stránky slepemapy.cz bude během roku 2018 ukončen!
 </div>
